# pydantic-glue

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pydantic_glue/: __init__.py  cli.py  errors.py  handler.py
tests/data/: expected.json  expected_by_name.json  input.py
tests/unit/: test_cli.py  test_convert.py  test_j2g.py
