[project]
name = "pydantic-glue"
keywords = ["pydantic", "glue", "athena", "types", "convert"]
version = "0.7.1"
description = "Convert pydantic model to aws glue schema for terraform"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [ { name = "Serhii Dimchenko", email = "svdimchenko@gmail.com" } ]
requires-python = ">=3.10,<4.0"
dependencies = [
	"jsonref >=1.1.0,<2.0.0",
	"pydantic >=2.7.1,<3.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/svdimchenko/pydantic-glue/issues"
"Releases" = "https://github.com/svdimchenko/pydantic-glue/releases"
Repository = "https://github.com/svdimchenko/pydantic-glue"

[project.scripts]
pydantic-glue = "pydantic_glue.cli:cli"

[dependency-groups]
dev = [
	"pytest >=8.2.0,<10.0.0",
	"cli-test-helpers >=4.1.0,<5.0.0",
	"mypy >=1.10.0,<3.0.0",
	"ruff >=0.9.4,<0.16.0",
	"pytest-cov >=6,<8",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	# The following rules may cause conflicts when used with the formatter
	"COM812",
	"ISC001",

	# General ignores
	"ANN204", # Missing return type annotation for special method `__init__`
	"D107",   # Missing docstring in `__init__`
	"D203",   # one-blank-line-before-class
	"D213",   # multi-line-summary-second-line
	"G004",   # Logging statement uses f-string
	"UP007",  # Use `X | Y` for type annotations
]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
	"ANN001",  # Missing type annotation for function argument
	"ANN201",  # Missing return type annotation for public function
	"D100",    # Missing docstring in public module
	"D101",    # Missing docstring in public class
	"D103",    # Missing docstring in public function
	"S101",    # Use of `assert` detected
	"S603",    # `subprocess` call: check for execution of untrusted input
]
"__init__.py" = ["D104"]  # Missing docstring in public package

"pydantic_glue/errors.py" = [
	"D101",    # Missing docstring in public class
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov"

[tool.mypy]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
